tests/NormalTests/paczka1/fuzzy1/26980447.err
Error in line 7: fLst A268 44,1
Error in line 11: fLst A866 74,5
Error in line 13: fLst S287 74,5
Error in line 19: fLst A644 90,2
Error in line 16: ZeXgsQjVr A866 82,9
Error in line 29: jcO9 A866 24,9
Error in line 24: fLst S287 98,6
Error in line 31: jcO9 A644 25,1
